2003-03-20  Seth Robertson  <seth@startide.sysdetect.com>

	* xml/b_search.c (bkxml_attrnode_data): Restore AWB default of
	missing text being empty string, not null.

2003-03-19  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_error.c (bk_error_irepeater_flush): Make sure error
	aggregation messages get added to the error queues.

	* test/test_errorstuff.c (progrun): Call bk_error_repeater_flush
	before bk_error_dump (here and other test programs).

2003-03-19  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_fileutils.c (bk_slurp): Enable slurped files to be null
	terminated if you will be treating them like strings.

2003-03-18  Seth Robertson  <seth@startide.sysdetect.com>

	* xml/b_search.c: libbkxml for non-awb-specific XML routines
	(licensing needed them and licensing is not AWB specific).
	These should be used preferrentially over a_xml.
	
2003-03-17  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_time.c (bk_time_iso_format): Add copy out flag to indicate
	that too little space was passed in.

2003-03-14  Seth Robertson  <seth@winwood.sysdetect.com>

	* lib/b_fileutils.c (bk_slurp): Add routines to slurp files.

2003-03-13  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_url.c (bk_url_reconstruct): Function to reconstruct a
	valid url string from it's parsed components.

2003-03-07  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_run.c (bk_run_event_comparator): Priority queues want
	*BOOLEAN* *NOT* tri-state comparators.

	* lib/b_ioh.c (bk_ioh_init): Initialization for follow mode.
	(ioh_runhandler): Check if we run out of data in follow mode.
	(check_follow): Function to determine (when in follow mode)
	whether we need to wait for new data or to proceed if new data
	have arrived.

2003-03-07  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_bnbio.c (bk_iohh_bnbio_read): If we've timed out but
	miraculously found some data at the last instant, do not count the
	round as a timeout.
